<resources>
    <!--Utility-->
    <string name="app_name">Utility</string>
    <string name="app_icon">Wrench Icon</string>
    <string name="status_db">Setting up Database...</string>
    <string name="status_user">Getting User Info...</string>
    <string name="status_complete">Complete!</string>
    <string name="create_title">Create Account</string>
    <string name="edit_username">Username</string>
    <string name="btn_create_account">Create Account</string>
    <string name="txt_exit">Exit</string>
    <string name="txt_invalid_username">Invalid Username!</string>
    <string name="txt_welcome">Welcome!</string>
    <string name="img_user_icon">User Icon</string>
    <string name="txt_account_name">Account Name:</string>
    <string name="app_content_desc">App Icon</string>
    <string name="app_home_icon">Home</string>
    <string name="txt_search">Search</string>
    <string name="txt_cancel">Cancel</string>
    <string name="empty_string"> </string>

    <!--Stopwatch App-->
    <string name="app_stopwatch">Stopwatch</string>
    <string name="app_stopwatch_title">Stopwatch</string>
    <string name="app_stopwatch_start_btn">Start</string>
    <string name="app_stopwatch_stop_btn">Stop</string>
    <string name="app_stopwatch_reset_btn">Reset</string>

    <!--Currency Exchange App-->
    <string name="app_currency_exchange">Currency Exchange</string>
    <string name="app_currency_exchange_invalid_amount">Invalid Amount!</string>
    <string name="app_currency_exchange_invalid_currency">Please Select Two Currencies!</string>
    <string name="app_currency_exchange_same_currency">The Same Currency cannot be Selected Twice!</string>
    <string name="app_currency_exchange_api_error">Unable to Retrieve Exchange Rate Data!</string>
    <string name="app_currency_exchange_my_currency">My Currency</string>
    <string name="app_currency_exchange_converted_to">Converted To</string>
    <string name="app_currency_exchange_amount_hint">Amount</string>
    <string name="app_currency_exchange_convert_switch">Convert to USD</string>
    <string name="app_currency_exchange_quote_text">Quote</string>

    <!--Coin Flip App-->
    <string name="app_coin_flip">Coin Flip</string>
    <string name="app_coin_flip_num_flip_hint">Number of Flips</string>
    <string name="app_coin_flip_flip">Flip</string>
    <string name="app_coin_flip_error_max">Error: Value exceeds maximum number of flips!</string>

    <!--Task Manager App-->
    <string name="app_task_manager">Task Manager</string>
    <string name="app_task_manager_task_details">Task Details</string>
    <string name="app_task_manager_add_task_hint">Add a New Task...</string>
    <string name="app_task_manager_delete_checked">Delete Checked</string>
    <string name="app_task_manager_completed">Completed</string>

    <!--Wifi Scanner App-->
    <string name="app_wifi_scanner">Wifi Scanner</string>
    <string name="app_wifi_scanner_scan">Scan</string>
    <string name="app_wifi_scanner_networks_found">%1$d Network(s) Found</string>
    <string name="app_wifi_scanner_wifi_disabled">WiFi is Disabled</string>
    <string name="app_wifi_scanner_enable_location_permission">Please enable Location Permissions</string>
    <string name="app_wifi_scanner_ensure_location_granted">Please ensure Location Permission is enabled</string>
    <string name="app_wifi_scanner_scanning">Scanning&#8230;</string>
    <string name="app_wifi_scanner_error">Error Getting Network Data</string>
    <string name="app_wifi_scanner_still_scanning">Still Scanning&#8230;</string>
    <string name="app_wifi_scanner_network_name">Network Name</string>
    <string name="app_wifi_scanner_network_strength">Signal Strength</string>
    <string name="app_wifi_scanner_nameless_network">Nameless Network</string>
</resources>
